changed nhost package to nextjs

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@nhost/react": "^0.12.4",
+    "@nhost/nextjs": "^1.7.4",
     "graphql": "^16.6.0",
     "next": "12.2.5",
     "react": "18.2.0",
