--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.6.9",
     "@nhost/nextjs": "^1.7.4",
     "@nhost/react": "^0.12.4",
-    "axios": "^0.27.2",
+    "@nhost/react-apollo": "^4.7.4",
     "graphql": "^16.6.0",
     "next": "12.2.5",
     "react": "18.2.0",
