Links | registration | ideas |idea details | fixes (#35)
* initial nhost seup

* nhost linking

* nhost linking

* nhost linking

* nhost linking

* removed env file

* taking care of hostname

* changed nhost package to nextjs

* fixed redirection issue

* lock file refresh

* added rect module for nhost

* redirect url server name update

* debug log for redirection issue

* debug log for redirection issue

* removed debug log for redirection issue

* initial registration page

* initial registration page

* registration with rich tetbox

* few color update

* intermittent checkin

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,7 +3,8 @@
         "baseUrl": ".",
         "paths": {
             "@/components/*": ["components/*"],
-            "@/services/*": ["services/*"]
+            "@/services/*": ["services/*"],
+            "@/styles/*": ["styles/*"]
           }
     }
 }
