--- a/package.json
+++ b/package.json
@@ -8,23 +8,20 @@
     "start": "next start",
     "lint": "next lint"
   },
-  "dependencies": {
-    "@apollo/client": "^3.6.9",
+  "dependencies":{
     "@emotion/react": "^11.10.4",
     "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.4",
     "@mui/material": "^5.10.4",
     "@nhost/nextjs": "^1.7.4",
     "@nhost/react": "^0.12.4",
-    "@nhost/react-apollo": "^4.7.4",
     "graphql": "^16.6.0",
     "json-graphql-parser": "^0.1.7",
     "lodash": "^4.17.21",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.4.0",
-    "react-quill": "^2.0.0"
+    "react-icons": "^4.4.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.8",
