--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,7 +4,8 @@
         "paths": {
             "@/components/*": ["components/*"],
             "@/services/*": ["services/*"],
-            "@/styles/*": ["styles/*"]
+            "@/styles/*": ["styles/*"],
+            "@/public/*": ["public/*"]
           }
     }
 }
