--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,11 @@ jspm_packages
 
 # DS Store
 .DS_STORE
+
+
+# package
+package-lock.json
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+yarn.lock
